# rust_agent

./: .gitignore  ADD_TESTING_PROMPT.md  ARCHITECTURE_DIAGRAM.md  BEFORE_AFTER_COMPARISON.md  CACHE_USAGE.md  CHANGES_DETAILED.md  CLAUDE.md  CLIPROXYAPI_SETUP.md  CONFIG_SYSTEM_SUMMARY.md  CONFIRMATION_DIALOG_TESTS.md  CONTEXT_GATHERING_FIX_COMPLETE.md  Cargo.toml  DELIVERY_SUMMARY.md  DIALOG_UI_REFERENCE.md  DOCUMENTATION_INDEX.md  EXERCISES.md  EXERCISES_SUMMARY.md  EXERCISE_DIAGRAM.txt  EXERCISE_REFERENCE.md  FEATURE_FILE_CREATION.md  FILE_CREATION_BUG_FIX.md  FILE_CREATION_CONFIRMATION_IMPLEMENTATION.md  FILE_CREATION_FIX_SUMMARY.md  FILE_CREATION_IMPLEMENTATION.md  FILE_REFERENCE.md  GUI_MIGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  MODERNIZATION_COMPLETE.md  PLAN.md  PROJECT_COMPLETE_SUMMARY.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  README.md  README_EXERCISES.md  README_SETUP.md  (+27 more)
.claude/: settings.local.json
architecture/: IMPLEMENTATION_STATUS.md  agent-training-methodology.md  components.md  data-flow.md  file-structure.md  implementation-plan.md  knowledge-system.md  learning-cycle.md  system-design.md  system-overview.md  unified-brain-integration.md
docs/: config-diagram.txt  configuration.md
examples/: config_demo.rs  exercises_demo.rs  knowledge_system_demo.rs  learning_with_exercises.rs  test_at_filepath.rs  test_web_search.rs
knowledge/: README.md  curriculum_master.json  quick_reference.md  rust_async_concurrency.json  rust_core_concepts.json  rust_file_structures.json  rust_patterns_idioms.json  rust_popular_crates.json  rust_standard_library.json  rust_toolchain_cargo.json
prompts/: file_creation_system_prompt.md
rusty_ide_v2/: .gitignore  AGENT_BRIDGE_DELIVERY.md  AGENT_BRIDGE_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CHECKLIST.md  DELIVERY_SUMMARY.md  FILES_CREATED.txt  IMPLEMENTATION_CHECKLIST.md  INSTALL.md  INTEGRATION_GUIDE.md  LAYOUT.txt  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP.md  TECHNICAL.md  TESTING_GUIDE.md  index.html  jsconfig.json  package-lock.json  package.json  rusty_launcher.sh  start_agent_daemon.sh  vite.config.js
rusty_ide_v2/scripts/: FEATURES.md  QUICK_START.txt  README.md  install-agent-service.sh  install-linux.sh  install-mac.sh  install-windows.bat  install.sh  rusty-agent.service
rusty_ide_v2/src/: App.jsx  bindings.ts
rusty_ide_v2/src-tauri/: ARCHITECTURE_DIAGRAM.txt  COMPARISON.md  CONVERSION_GUIDE.md  CONVERSION_SUMMARY.md  Cargo.toml  Cargo.toml.backup  FILES_CREATED.md  INDEX.md  QUICKSTART.md  README.md  README_TUI.md  SUCCESS_REPORT.md  TUI_README.md  UPDATES_SUMMARY.md  verify_install.sh
rusty_ide_v2/src-tauri/src/: AGENT_BRIDGE_README.md  agent_bridge.rs  agent_manager.rs  agent_wrapper.sh  app.rs  file_manager.rs  lib.rs  main.rs  main.rs.backup  terminal_manager.rs  ui.rs
rusty_ide_v2/src-tauri/src/examples/: agent_integration.rs
rusty_ide_v2/src-tauri/tests/: agent_bridge_tests.rs
rusty_ide_v2/src/components/: AgentSidebar.jsx  FileTree.jsx  Header.jsx  MonacoEditor.jsx  Terminal.jsx
rusty_ide_v2/src/styles/: App.css  theme.css
rusty_tui/: Cargo.toml  QUICK_START.md
rusty_tui/src/: app.rs  chat.rs  commands.rs  input.rs  main.rs  ui.rs
rusty_tui/src/gui/: app.rs  layout.rs  messages.rs  mod.rs  theme.rs  worker.rs
scripts/: .tree.txt  FEATURES.md  INDEX.md  INSTALLATION_SUMMARY.md  README.md  SHOWCASE.md  TEST_GUIDE.md  install-rusty-linux.sh  install-rusty-mac.sh  install-rusty-windows.bat
src/: answer_agent.rs  book_reader.rs  cache.rs  claude_client.rs  claude_proxy.rs  config.rs  exercise_integration.rs  exercises.rs  file_generator.rs  interactive_agent.rs  knowledge_based_learning.rs  learning_agent.rs  lib.rs  main.rs  orchestrator.rs  proxy_agents.rs  question_agent.rs  types.rs
src/knowledge/: database.rs  loader.rs  mod.rs  query.rs
src/tools/: autonomous.rs  compiler_interface.rs  context_gatherer.rs  file_operations.rs  knowledge_fetcher.rs  mod.rs  slash_commands.rs  test_runner.rs  types.rs
src/web_search/: README.md  duckduckgo.rs  mod.rs  types.rs
testing/: Cargo.toml
testing/src/: main.rs  routes.rs
tests/: code_block_parsing_test.rs  exercises_test.rs  file_operations_test.rs  knowledge_database_test.rs
tests/common/: db_test_utils.rs  file_test_utils.rs  mod.rs  parsing_test_utils.rs
