[package]
name = "rust_agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
url = "2.5"
regex = "1.10"
sha2 = "0.10"
toml = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
