[package]
name = "rusty"
version = "1.0.0"
edition = "2021"
authors = ["Rusty Agent Team"]
description = "Beautiful GUI for Rust learning agent with instant knowledge access"

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
# Parent library with knowledge database
rust_agent = { path = ".." }

# GUI framework
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Syntax highlighting
syntect = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# Directories
dirs = "5.0"
